--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "@angular/compiler": "~15.1.0",
     "@angular/core": "~15.1.0",
     "@angular/forms": "~15.1.0",
+    "@angular/localize": "^15.1.3",
     "@angular/platform-browser": "~15.1.0",
     "@angular/platform-browser-dynamic": "~15.1.0",
     "@angular/router": "~15.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^14.0.1",
+    "@ngneat/transloco": "^4.2.2",
     "@nrwl/angular": "15.6.3",
+    "@popperjs/core": "^2.11.6",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
