--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ngneat/transloco": "^4.2.2",
     "@nrwl/angular": "15.6.3",
     "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.2.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
