--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@angular/cli": "~15.1.0",
     "@angular/compiler-cli": "~15.1.0",
     "@angular/language-service": "~15.1.0",
+    "@mihalcan/shallow-render-schematics": "^0.0.2",
     "@nrwl/cypress": "15.6.3",
     "@nrwl/eslint-plugin-nx": "15.6.3",
     "@nrwl/jest": "15.6.3",
@@ -53,6 +54,7 @@
     "jest-preset-angular": "~12.2.3",
     "nx": "15.6.3",
     "prettier": "^2.6.2",
+    "shallow-render": "^15.0.1",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "typescript": "~4.8.2"
